--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,16 +1,32 @@
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 50px 20px;
     position: fixed;
     top: 0;
     left: 0;
-    width: 97%;
-    background-color: transparent;
-    color: black;
-    z-index: 1;
-    pointer-events: none;
+    right: 0;
+    padding: 2rem 2rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 1000;
+    transition: color 0.3s ease;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.2);
+    color: #ffffff;
+}
+
+.navbar.dark-background {
+    color: #000000;
+}
+
+.navbar.light-background {
+    color: #ffffff;
+}
+
+.navbar.dark-background h1{
+    color: #000000;
+}
+
+.navbar.light-background h1{
+    color: #ffffff;
 }
 
 .navbar * {
@@ -18,9 +34,11 @@
 }
 
 .navbar ul {
-    list-style: none;
     display: flex;
-    gap: 20px;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    gap: 2rem;
 }
 
 .navbar ul li {
@@ -28,14 +46,13 @@
 }
 
 .navbar a {
-    color: black;
     text-decoration: none;
-    font-weight: lighter;
+    color: inherit;
+    transition: opacity 0.3s ease;
 }
 
 .navbar a:hover {
-    text-decoration: underline;
-    text-decoration-color: #6e5192;
+    opacity: 0.7;
 }
 
 .navbar h1 {
@@ -43,10 +60,10 @@
     align-items: center;
     margin: 0;
     font-size: 24px;
-    color: black;
     font-weight: normal;
     gap: 5px;
     transition: gap 0.5s ease;
+    color: inherit;
 }
 
 .navbar h1:hover {
@@ -58,14 +75,15 @@
 }
 
 .navbar .last-name {
+    opacity: 1;
     transform: translateX(0px);
-    transition: transform 0.5s ease;
+    transition: transform 0.5s ease, opacity 0.5s ease;
 }
 
 .navbar h1:hover .last-name {
-    transform: translateX(750px);
-    transition: opacity 0.5s ease, transform 0.5s ease;
     opacity: 0;
+    transform: translateX(750px);
+    transition: opacity 0.5s ease, transform 1s ease;
 }
 
 .navbar .middle-name {
