--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -3,6 +3,7 @@ html, body {
     overflow: hidden;
     height: 100%;
     z-index: 1;
+    background-color: black;
 }
 
 .parallax-layer-content {
@@ -11,22 +12,10 @@ html, body {
     align-items: center;
     height: 100vh;
     text-align: center;
-    color: black;
+    color: white;
     font-size: medium;
 }
 
 .parallax {
     overflow: auto;
-}
-
-.background-image {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url('../assets/bg.jpg');
-    background-size: cover;
-    background-position: center center;
-    z-index: -1;
 }
