--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -6,16 +6,97 @@ html, body {
     background-color: black;
 }
 
+.image-title {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 2rem;
+    color: black;
+    font-weight: normal;
+    z-index: 15;
+}
+
 .parallax-layer-content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    position: relative;
     height: 100vh;
     text-align: center;
     color: white;
     font-size: medium;
+    z-index: 2;
 }
 
 .parallax {
     overflow: auto;
+}
+
+.up-image-container {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100px;
+}
+
+.phoebe-image-container {
+    position: absolute;
+    top: 56%;
+    left: 5%;
+    width: 300px;
+}
+
+.scrolling-image {
+    width: 100%;
+    position: sticky;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.parallax-layer-content h1 {
+    font-size: 2rem;
+    color: white;
+    z-index: 3;
+}
+
+.parallax-layer-content::before,
+.bg-parallax-layer-content::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 50%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+
+.parallax-layer-content::before {
+    background-image: url('../../assets/glf.png');
+    z-index: 2;
+}
+
+.bg-parallax-layer-content::before {
+    background-image: url('../../assets/glf-bg.png');
+    z-index: 1;
+}
+
+.text-item {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 24px;
+    color: white;
+    text-align: center;
+    z-index: 3;
+}
+
+.text-item-small {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 20px;
+    color: gray;
+    text-align: center;
+    z-index: 3;
 }
