--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -45,10 +45,12 @@ html, body {
 }
 
 .scrolling-image {
-    width: 100%;
-    position: sticky;
+    width: 50%;
+    max-width: 200px;
+    position: fixed;
     top: 50%;
-    transform: translateY(-50%);
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .parallax-layer-content h1 {
