--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -94,3 +94,70 @@ p {
   opacity: 0.7;
   text-decoration: underline;
 }
+
+@media (max-width: 768px) {
+  .contact-container {
+    flex-direction: column;
+    height: 100vh;
+    width: 100%;
+  }
+
+  .contact-half {
+    flex: 1;
+    width: 100%;
+    min-height: 50vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: -30px;
+    transition: none;
+  }
+
+  .contentl, .contentr {
+    max-width: 75%;
+  }
+
+  h1 {
+    font-size: 2rem;
+    margin: 2.5rem 0;
+  }
+
+  p {
+    font-size: 1rem;
+  }
+
+  .social-links {
+    align-items: center;
+  }
+
+  .social-item {
+    justify-content: center;
+  }
+
+  .contentr .social-item {
+    flex-direction: row;
+  }
+
+  .social-logo {
+    width: 20px;
+    height: 20px;
+  }
+
+  .username {
+    font-size: 1rem;
+  }
+
+  .left-half.hovered,
+  .right-half.hovered {
+    background-color: #000000;
+    color: #ffffff;
+  }
+
+  .left-half.hovered .social-logo,
+  .right-half.hovered .social-logo {
+    filter: invert(1);
+  }
+}
+
