--- a/src/pages/Life/Life.css
+++ b/src/pages/Life/Life.css
@@ -1,11 +1,9 @@
-/* Container and layout */
 .life-container {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
 }
 
-/* Gallery grid */
 .life-gallery-grid {
     padding: 200px;
     display: grid;
@@ -25,7 +23,6 @@
     }
 }
 
-/* Image container styles */
 .life-image-container {
     position: relative;
     overflow: hidden;
@@ -40,7 +37,6 @@
     box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
 }
 
-/* Image styles */
 .life-gallery-image {
     width: 100%;
     height: 16rem;
@@ -48,7 +44,6 @@
     display: block;
 }
 
-/* Caption overlay */
 .life-caption-overlay {
     position: absolute;
     bottom: 0;
@@ -67,7 +62,6 @@
     display: inline-block;
 }
 
-/* Modal styles */
 .life-modal-overlay {
     position: fixed;
     top: 10%;
@@ -126,7 +120,37 @@
     object-fit: contain;
 }
 
-/* Utility to hide elements */
 .life-hidden {
     display: none;
+}
+
+@media (max-width: 768px) {
+    .life-gallery-grid {
+        margin: 90px auto 30px;
+        padding: 3rem;
+        grid-template-columns: 1fr;
+    }
+
+    .life-gallery-image {
+        height: 12rem;
+    }
+
+    .life-caption-text {
+        font-size: 0.875rem;
+    }
+
+    .life-modal-container {
+        width: 100%;
+        max-width: none;
+    }
+
+    .life-modal-close-button {
+        top: 1rem;
+        right: 1rem;
+    }
+
+    .life-modal-close-icon {
+        width: 1.25rem;
+        height: 1.25rem;
+    }
 }
