--- a/src/pages/Resumé/Resumé.css
+++ b/src/pages/Resumé/Resumé.css
@@ -130,3 +130,35 @@ body {
 .resume-page .dot:hover {
     background-color: #6E5191;
 }
+
+@media screen and (max-width: 768px) {
+    .resume-header {
+        flex-direction: row;
+        text-align: center;
+        gap: 5px;
+    }
+
+    .resume-container {
+        padding: 50px 5vw;
+    }
+
+    .resume-page h2 {
+        font-size: 2rem;
+    }
+
+    .resume-page h3 {
+        font-size: 1.6rem;
+    }
+
+    .resume-page h4 {
+        font-size: 1.2rem;
+    }
+
+    .description {
+        font-size: 0.9rem;
+    }
+
+    .date {
+        font-size: 0.8rem;
+    }
+}
